WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52720
REGRESSION (
r75987
): Assertion failure in WebView::scrollBackingStore when scrolling page with composited content
https://bugs.webkit.org/show_bug.cgi?id=52720
Summary
REGRESSION (r75987): Assertion failure in WebView::scrollBackingStore when sc...
Adam Roben (:aroben)
Reported
2011-01-19 06:44:10 PST
REGRESSION (
r75987
): Assertion failure in WebView::scrollBackingStore when scrolling page with composited content
Attachments
Patch
(5.60 KB, patch)
2011-01-19 06:45 PST
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Teach WebView::scrollBackingStore about compositing mode
(5.66 KB, patch)
2011-01-19 09:07 PST
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Teach WebView::scrollBackingStore about compositing mode
(4.62 KB, patch)
2011-01-20 08:48 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-01-19 06:45:37 PST
Created
attachment 79416
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-01-19 08:16:01 PST
I just realized that I've probably affected the pixel results by adding layoutTestController.display() to these tests. That function puts a gray overlay over everything. Maybe that's OK, or maybe I should write a new dumpAsText test whose whole purpose is to trigger this assertion?
Simon Fraser (smfr)
Comment 3
2011-01-19 08:28:42 PST
Comment on
attachment 79416
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=79416&action=review
> LayoutTests/ChangeLog:11 > + This makes these tests trigger this bug: <
http://webkit.org/b/52720
> REGRESSION (
r75987
): > + Assertion failure in WebView::scrollBackingStore when scrolling page with composited content
But shouldn't keep a test that triggers the bug?
Simon Fraser (smfr)
Comment 4
2011-01-19 08:28:52 PST
... we keep ...
Adam Roben (:aroben)
Comment 5
2011-01-19 08:56:46 PST
Comment on
attachment 79416
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=79416&action=review
>> LayoutTests/ChangeLog:11 >> + Assertion failure in WebView::scrollBackingStore when scrolling page with composited content > > But shouldn't keep a test that triggers the bug?
I guess I wasn't clear in the ChangeLog. Changing the tests in this way makes them trigger the bug. Prior to this patch, the tests did not trigger the bug. After changing the tests, they do trigger the bug. Then I fixed the bug in WebKit. I'll try to come up with a better way of phrasing this. But as I mentioned above, perhaps I should be writing a new test instead of modifying these.
Adam Roben (:aroben)
Comment 6
2011-01-19 09:04:06 PST
(In reply to
comment #2
)
> I just realized that I've probably affected the pixel results by adding layoutTestController.display() to these tests. That function puts a gray overlay over everything.
Turns out this change didn't modify the pixel results. I guess the whole view gets repainted during the scroll, so the gray overlay doesn't show up in the final results. I'll clarify the ChangeLog and post a new patch.
Adam Roben (:aroben)
Comment 7
2011-01-19 09:07:18 PST
Created
attachment 79431
[details]
Teach WebView::scrollBackingStore about compositing mode
Adam Roben (:aroben)
Comment 8
2011-01-20 08:48:04 PST
Created
attachment 79604
[details]
Teach WebView::scrollBackingStore about compositing mode
Adam Roben (:aroben)
Comment 9
2011-01-20 09:13:57 PST
Committed
r76254
: <
http://trac.webkit.org/changeset/76254
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug