Teach WebView::scrollBackingStore about compositing mode

Test:
    compositing/scroll-painted-composited-content.html

Fixes <http://webkit.org/b/52720> REGRESSION (r75987): Assertion failure in
WebView::scrollBackingStore when scrolling page with composited content

Reviewed by Anders Carlsson.

Source/WebKit/win:

* WebView.cpp:
(WebView::scrollBackingStore): Do something sensible (though naive) when in compositing
mode, rather than incorrectly asserting that this function is never called in that case. For
now we just repaint the entire scrolled region; someday hopefully we can avoid having to
repaint the areas that have just been moved.

LayoutTests:

Add a test that scrolls composited content that has already been painted

* compositing/scroll-painted-composited-content.html: Added.
* compositing/scroll-painted-composited-content-expected.txt: Added.

Canonical link: https://commits.webkit.org/66492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76254 268f45cc-cd09-0410-ab3c-d52691b4dbfc